Bug 1330955 - Stop crash in CMapiImp::Login(). r=rkent